--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -66,7 +66,7 @@
     "profile": "Profile"
   },
   "settings": {
-    "self": "Setting",
+    "self": "Admin Settings",
     "preference": {
       "self": "Preference",
       "color-theme": "Color theme"
