adding public pages

--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -5,6 +5,7 @@
     "cancel": "Cancel",
     "save": "Save",
     "create": "Create",
+    "reload": "Reload",
     "download": "Download",
     "edit": "Edit",
     "delete": "Delete",
